<resources>
    <string name="app_name">OurStatus</string>
    <string name="create_new_"> What do you want to accomplish?</string>
    <string name="what_do_you_want_to_accomplish">What do you want to accomplish?</string>
    <string name="task_name">Task Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="account_login">Account login</string>
    <string name="ourstatus">OurStatus</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="retype_password">Retype Password</string>
    <string name="reset">Reset</string>
    <string name="task_name1">task_name1</string>
    <string name="task_name2">task_name2</string>
    <string name="task_name3">task_name3</string>
    <string name="reset_password">Reset Password</string>
    <string name="username_completed_task">Username completed task:</string>
    <string name="like_count">0</string>
    <string name="comment_text">Username This is cool</string>
    <string name="scale_text">yo</string>
    <string name="add_a_comment">Add a comment ...</string>
    <string name="friend_name">Friend name</string>

</resources>
