<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ourstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/ourstatus"
        android:textAppearance="@style/ourstatus"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_bold"
        android:lineSpacingExtra="0sp"
        android:text="@string/account_login"
        android:textAppearance="@style/title"
        app:layout_constraintBottom_toBottomOf="@id/new_account_title_h2"
        app:layout_constraintStart_toStartOf="@+id/login_title_v1"
        app:layout_constraintTop_toTopOf="@id/new_account_title_h1"
        app:layout_constraintEnd_toEndOf="@id/login_title_v2"
        app:layout_constraintVertical_bias=".36" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:text="@string/username"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/user_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/user_h1"
        app:layout_constraintVertical_bias="0.40" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:text="@string/password"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/password_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/password_h1"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="signIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_title_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.096" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_title_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_account_title_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_account_title_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.096" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.904" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />



</androidx.constraintlayout.widget.ConstraintLayout>