<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ourstatus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto_bold"
        android:lineSpacingExtra="0sp"
        android:text="@string/ourstatus"
        android:textAppearance="@style/ourstatus"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/screen_title_h2"
        app:layout_constraintEnd_toEndOf="@id/screen_title_v2"
        app:layout_constraintStart_toStartOf="@id/screen_title_v1"
        app:layout_constraintTop_toTopOf="@id/screen_title_h1" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_bold"
        android:lineSpacingExtra="0sp"
        android:text="@string/create_account"
        android:textAppearance="@style/title"
        app:layout_constraintBottom_toBottomOf="@id/new_account_title_h2"
        app:layout_constraintStart_toStartOf="@+id/create_title_v1"
        app:layout_constraintTop_toTopOf="@id/new_account_title_h1"
        app:layout_constraintEnd_toEndOf="@id/create_title_v2"
        app:layout_constraintVertical_bias=".36" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:hint="First Name"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/firstName_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/firstName_h1" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:hint="@string/last_name"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/lastName_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/lastName_h1"
        app:layout_constraintVertical_bias="0.49" />

    <EditText
        android:id="@+id/eMail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:hint="@string/e_mail"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/eMail_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/eMail_h1"
        app:layout_constraintVertical_bias="0.49" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:hint="@string/username"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/user_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/user_h1"
        app:layout_constraintVertical_bias="0.40" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:hint="@string/password"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/password_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/password_h1"
        app:layout_constraintVertical_bias="0.49" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:hint="@string/retype_password"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/confirm_password_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/confirm_password_h1"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onClick"
        android:hint="@string/create_account"
        android:background="@drawable/create_account"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintBottom_toBottomOf="@id/create_account_h2"
        app:layout_constraintEnd_toEndOf="@id/create_account_v2"
        app:layout_constraintStart_toStartOf="@id/create_account_v1"
        app:layout_constraintTop_toTopOf="@id/create_account_h1"
        app:layout_constraintVertical_bias="0.96" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_title_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_title_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_title_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_title_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_title_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.096" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_title_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_account_title_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_account_title_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.096" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.904" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/firstName_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/firstName_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lastName_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lastName_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/eMail_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/eMail_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/confirm_password_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/confirm_password_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.175" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.825" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_account_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.975" />




</androidx.constraintlayout.widget.ConstraintLayout>