<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ourstatus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto_bold"
        android:textAlignment="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/ourstatus"
        android:textAppearance="@style/ourstatus"
        app:layout_constraintBottom_toTopOf="@+id/screen_title_h2"
        app:layout_constraintEnd_toEndOf="@id/screen_title_v2"
        app:layout_constraintStart_toStartOf="@id/screen_title_v1"
        app:layout_constraintTop_toTopOf="@id/screen_title_h1" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_password"
        android:gravity="center"
        android:textAppearance="@style/title"
        app:layout_constraintBottom_toBottomOf="@id/new_account_title_h2"
        app:layout_constraintStart_toStartOf="@+id/create_title_v1"
        app:layout_constraintTop_toTopOf="@id/new_account_title_h1"
        app:layout_constraintEnd_toEndOf="@id/create_title_v2"
        app:layout_constraintVertical_bias=".36" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:textAlignment="textEnd"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_in"
        android:textColor="#616CCB"
        android:onClick="onClick"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/reset_h2"
        app:layout_constraintStart_toStartOf="@+id/reset_v1"
        app:layout_constraintTop_toTopOf="@id/reset_h1"
        app:layout_constraintEnd_toEndOf="@id/reset_v2"
        app:layout_constraintVertical_bias=".36" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:hint="@string/username"
        android:textColor="#A9BBC9"
        app:layout_constraintBottom_toBottomOf="@id/user_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/user_h1" />

    <EditText
        android:id="@+id/eMail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/input_box"
        android:paddingStart="10dp"
        android:hint="@string/e_mail"
        android:textColor="#A9BBC9"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/password_h2"
        app:layout_constraintEnd_toEndOf="@id/input_v2"
        app:layout_constraintStart_toStartOf="@id/input_v1"
        app:layout_constraintTop_toTopOf="@id/password_h1"/>


    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/reset_password"
        android:onClick="onClick"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintBottom_toBottomOf="@id/login_button_h2"
        app:layout_constraintEnd_toEndOf="@id/login_button_v2"
        app:layout_constraintStart_toStartOf="@id/login_button_v1"
        app:layout_constraintTop_toBottomOf="@+id/login_button_h1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_title_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_title_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_title_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_title_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_title_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.096" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_title_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_account_title_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_account_title_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reset_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reset_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.904" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reset_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.305" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reset_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.345" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.096" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.904" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/user_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/password_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_button_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_button_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_button_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.675" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_button_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />



</androidx.constraintlayout.widget.ConstraintLayout>